tests/baselines/reference/twoGenericInterfacesWithTheSameNameButDifferentArity.errors.txt
==== tests/cases/compiler/twoGenericInterfacesWithTheSameNameButDifferentArity.ts (3 errors) ====
    interface A<T> {
        x: T;
    }
    
    interface A<T, U> { // error
              ~
!!! twoGenericInterfacesWithTheSameNameButDifferentArity.ts(5,11): error TS2234: All declarations of an interface must have identical type parameters.
        y: T;
    }
    
    module M {
        interface A<T> {
            x: T;
        }
    
        interface A<T, U> { // error
                  ~
!!! twoGenericInterfacesWithTheSameNameButDifferentArity.ts(14,15): error TS2234: All declarations of an interface must have identical type parameters.
            y: T;
        }
    }
    
    module M2 {
        interface A<T> {
            x: T;
        }
    }
    
    module M2 {
        interface A<T, U> { // ok, different declaration space than other M2
            y: T;
        }
    }
    
    module M3 {
        export interface A<T> {
            x: T;
        }
    }
    
    module M3 {
        export interface A<T, U> { // error
                         ~
!!! twoGenericInterfacesWithTheSameNameButDifferentArity.ts(38,22): error TS2234: All declarations of an interface must have identical type parameters.
            y: T;
        }
    }